Fixed tab styling on mobile

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -347,7 +347,7 @@ header nav a:hover {
     padding: 10px 15px;
   }
   .tabs .tab p {
-    font-size: 1.4rem;
+    font-size: 1.1rem;
   }
 }
 .tabs .selected-tab {
